Fixed typo in README.

--- a/README
+++ b/README
@@ -1,4 +1,4 @@
-The sound have been taken from www.logic-cafe.com.
+The sounds have been taken from www.logic-cafe.com.
 
 The used sounds are found here:
 http://www.logic-cafe.com/Article_View.asp?ID=156&CategoryID=7
