--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+The used font Vector Battle has been taken from Fontspace.
+The font can be downloaded at http://www.fontspace.com/freaky-fonts/vector-battle.
+
 The sounds have been taken from www.logic-cafe.com.
 
 The used sounds are found here:
