--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 The used font Vector Battle has been taken from Fontspace.
 The font can be downloaded at http://www.fontspace.com/freaky-fonts/vector-battle.
 
-The sounds have been taken from www.logic-cafe.com.
+The sounds have been taken from Logic Café.
 
 The used sounds are found here:
 http://www.logic-cafe.com/Article_View.asp?ID=156&CategoryID=7
