--- a/README
+++ b/README
@@ -1,3 +1,6 @@
+This is my first experiment with Google's PlayN and a try to revive my rusty
+java skills. I choose an old classic to concentrate on the programming.
+
 The used font Vector Battle has been taken from Fontspace.
 The font can be downloaded at http://www.fontspace.com/freaky-fonts/vector-battle.
 
